DDD News						-*- text -*-
********

DDD 3.2.1
=========

DDD 3.2.1 fixes a couple of minor bugs.

- DDD PostScript documentation can now be printed on multiple pages per sheet
- [LessTif] The `Print' dialog works with LessTif (esp. printing to file)
- [Perl] In the data display, Perl hash keys are properly quoted.
- [Build] Small fixes for building with LessTif on SGI



DDD 3.2
=======

DDD 3.2 brings a new documentation and several minor improvements.


DDD is now a GNU program
------------------------

- Starting with this release, DDD is an official GNU program,
  distributed by the Free Software Foundation.  This brings a number of
  administrative changes:

  * DDD is distributed as source only using GNU FTP sites and mirrors.
  
  * The DDD WWW page is now `http://www.gnu.org/software/ddd/'.
  
  * The DDD mailing addresses are now `bug-ddd@gnu.org' (for bug reports) 
    and `ddd@gnu.org' (for announcements, discussions, or anything else).
  
    You can subscribe to these lists by sending an e-mail to
    `bug-ddd-request@gnu.org' and `ddd-request@gnu.org', respectively.

  There will be a smooth transition from previous DDD resources to the
  new ones; subscribers of old mailing lists will be notified.


Documentation
-------------

- There is a new DDD manual, generated from Texinfo source, and coming
  in HTML, PDF, PostScript, Info, as well as plain text format.


Debuggers and Languages
-----------------------

- This release contains partial support for DEC's `ladebug' debugger.
  Please send in bug reports listing remaining problems.

- Parsing of JDB data has been improved.

- DBX prompts for object file names are recognized.


User Interface
--------------

- `Breakpoint Properties', `Define Command', and `Debugger Settings'
  have an `Apply' button that applies changes to text fields.

- In TTY mode, you can edit and complete the command line as in GDB.
  (Uses GNU readline library.)
